fix bug login using email

--- a/fimco/fimcosite/templates/about.html
+++ b/fimco/fimcosite/templates/about.html
@@ -24,7 +24,7 @@
                         have been driven with the need to spread financial market literacy and capabilities by
                         informing, advising and executing investments with and for clients.
                     </p>
-                    <p class="more-content">
+                    <p>
                         This assistance through offering relevant information, advisory or execution capabilities
                         is underpinned by the deep understanding of local market dynamics and core values committed to
                         Diligence, Integrity and Innovation in all we do. We are looking to introduce local and foreign
@@ -54,7 +54,7 @@
                             data-responsive_offset="on"
                             data-responsive="off"
 
-                            style="z-index: 9; white-space: nowrap;letter-spacing:1px;">LEARN MORE
+                            style="z-index: 9; white-space: nowrap;letter-spacing:1px;">Play Video
                         </a>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                             </li>
                             <li class="mb-20">
                                 <i class="fa fa-check text-success fs-18"></i>
-                                <span class="block bold fs-18">We Advice</span>
+                                <span class="block bold fs-18">We Advise</span>
                                 <small>
                                     Be it for corporate treasury operations, government entities, foreign investors or
                                     individuals we interact with our client and devise best course of action for them to
@@ -333,7 +333,7 @@
     <section class="section-sm" id="approach">
         <div class="container">
             <header class="text-center mb-10">
-                <h3>OUR PHILOSOPHY</h3>
+                <h3>OUR INVESTMENT APPROACH</h3>
             </header>
             <hr class="mb-60" />
             <div class="row">
