--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -76,7 +76,7 @@
                                             <li><a href="{% url 'site' 'about' %}#vision">Our vision</a></li>
                                             <li><a href="{% url 'site' 'about' %}#founders">Our people</a></li>
                                             <li class="divider"></li>
-                                            <li><a href="{% url 'site' 'about' %}#approach">Our Philosophy</a></li>
+                                            <li><a href="{% url 'site' 'about' %}#approach">Our Investment Approach</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
@@ -98,6 +98,7 @@
                                             <li><a href="{% url 'site' 'blog' %}">Blog</a></li>
                                         </ul>
                                     </li>
+                                    <li><a href="{% url 'site' 'contact' %}"><i class="fa fa-phone"></i></a></li>
                                 </ul>
                             </nav>
 						</div>
@@ -121,13 +122,12 @@
                             <div class="col-md-6 col-sm-6">
                                 <ul class="float-right m-0 list-inline mobile-block">
                                     <li><a href="{% url 'site' 'terms' %}">Terms &amp; Conditions</a></li>
-                                    <li>&bull;</li>
-                                    <li><a href="#">Privacy</a></li>
+{#                                    <li>&bull;</li>#}
+{#                                    <li><a href="#">Privacy</a></li>#}
                                 </ul>
-                                &copy; All Rights Reserved, FIMCO Limited<br>
-                                FIMCO Limited is an authorised financial <br>
-                                services provider licensed by the <br>
-                                Capital Market Security Authority
+                                Copyright &copy; 2017 FIMCO Limited. All Rights Reserved.<br>
+                                FIMCO Limited is an authorised financial services provider<br>
+                                licensed by the Capital Market Security Authority.
                             </div>
                             <div class="col-md-4 col-sm-4 hidden-xs-down">
                                 <!-- Social Icons -->
