--- a/fimco/fimcosite/templates/contact.html
+++ b/fimco/fimcosite/templates/contact.html
@@ -38,10 +38,6 @@
                     <h1 class="mb-10 fw-300">
                         Contact us
                     </h1>
-                    <h4 class="fw-400">
-                        OUR CLIENT SERVICE CENTRE IS CURRENTLY CLOSED<br>
-                        OUR BUSINESS HOURS ARE MONDAY TO FRIDAY, FROM 07:30 TO 17:30
-                    </h4>
                 </div>
             </div>
             <div class="row">
@@ -50,14 +46,7 @@
                         <i class="ico-color ico-rounded fa fa-phone"></i>
                         <div class="inline-block">
                             <span class="description">call us</span>
-                            <span class="phone fw-600">0789 123 456</span>
-                        </div>
-                    </a>
-                    <a class="block pb-15 pt-15">
-                        <i class="ico-color ico-rounded fa fa-phone"></i>
-                        <div class="inline-block">
-                            <span class="description">email us</span>
-                            <span class="phone fw-600">info@fimco.co.tz</span>
+                            <span class="phone fw-600">+255 22 292627 / +255 767 211690</span>
                         </div>
                     </a>
                 </div>
@@ -65,15 +54,8 @@
                     <a class="block pb-15 pt-15">
                         <i class="ico-color ico-rounded fa fa-phone"></i>
                         <div class="inline-block">
-                            <span class="description">fax us</span>
-                            <span class="phone fw-600">+255 789 123 456</span>
-                        </div>
-                    </a>
-                    <a class="block pb-15 pt-15">
-                        <i class="ico-color ico-rounded fa fa-phone"></i>
-                        <div class="inline-block">
-                            <span class="description">calls from outside tanzania</span>
-                            <span class="phone fw-600">+255 789 123 456</span>
+                            <span class="description">email us</span>
+                            <span class="phone fw-600">info@fimco.co.tz</span>
                         </div>
                     </a>
                 </div>
@@ -85,7 +67,7 @@
                     <div class="box-static box-border-top p-30">
 
                         <div class="box-title mb-30">
-                            <h2 class="fs-20"><strong><em>DM</em></strong> Anyone? ...</h2>
+                            <h2 class="fs-20"><strong>Submit your message here</strong></h2>
                         </div>
                         <!--
                         MESSAGES
@@ -145,8 +127,8 @@
                                             <input required type="email" value="" class="form-control" name="contact[email][required]" id="contact:email">
                                         </div>
                                         <div class="col-md-4">
-                                            <label for="contact:phone">Phone</label>
-                                            <input type="text" value="" class="form-control" name="contact[phone]" id="contact:phone">
+                                            <label for="contact:phone">Phone *</label>
+                                            <input type="text" value="" class="form-control" name="contact[phone][required]" id="contact:phone">
                                         </div>
                                 </div>
                                 <div class="row">
@@ -162,7 +144,7 @@
                                 <div class="row">
                                         <div class="col-md-12">
                                             <label for="contact:message">Message *</label>
-                                            <textarea required maxlength="10000" rows="8" class="form-control" name="contact[message]" id="contact:message"></textarea>
+                                            <textarea required maxlength="10000" rows="8" class="form-control" name="contact[message][required]" id="contact:message"></textarea>
                                         </div>
                                 </div>
                                 <div class="row">
@@ -193,22 +175,18 @@
                 <!-- INFO -->
                 <div class="col-md-4 col-sm-4">
                     <h2>Visit Us</h2>
+{#                        <hr />#}
                         <p>
-                            Please feel free to drop by our office any time during our business hours in the 2nd floor,
-                            Jangid Plaza for any inquiries regarding FIMCO platform products. We'll be glad to help you!
-                        </p>
-                        <hr />
-                        <p>
-                            <span class="block"><strong><i class="fa fa-map-marker"></i> Address:</strong> Plot No. G6, Chaburuma Road, Off. Ali Hassan Mwinyi Road, Dar Es Salaam, Tanzania</span>
-                            <span class="block"><strong><i class="fa fa-phone"></i> Phone:</strong> <a href="tel:255789123456">+255 789 123 456</a></span>
-                            <span class="block"><strong><i class="fa fa-envelope"></i> Email:</strong> <a href="mailto:admin@fimco.co.tz">admin@fimco.co.tz</a></span>
+                            <span class="block"><strong><i class="fa fa-map-marker"></i> Address:</strong><br> Office #205<br> 2nd Floor Jangid Plaza<br> Plot No. G6, Chaburuma Road, Off. Ali Hassan Mwinyi Road<br> Dar Es Salaam, Tanzania.</span>
+                            <span class="block"><strong><i class="fa fa-phone"></i> Phone:</strong> <a href="tel:255789123456">+255 22 292627 / +255 767 211690</a></span>
+                            <span class="block"><strong><i class="fa fa-envelope"></i> Email:</strong> <a href="mailto:info@fimco.co.tz">info@fimco.co.tz</a></span>
                         </p>
                         <hr />
                         <h4 class="font300">Business Hours</h4>
                         <p>
-                            <span class="block"><strong>Monday - Friday:</strong> 9am to 6pm</span>
-                            <span class="block"><strong>Saturday:</strong> 10am to 2pm</span>
-                            <span class="block"><strong>Sunday:</strong> Closed</span>
+                            <span class="block"><strong>Monday - Friday:</strong> 8:30am to 5:15pm</span>
+                            <span class="block"><strong>Saturday:</strong> 9am to 12:30pm</span>
+                            <span class="block"><strong>Sunday/Public Holidays:</strong> Closed</span>
                         </p>
                 </div>
                 <!-- /INFO -->
