--- a/fimco/fimcosite/templates/login.html
+++ b/fimco/fimcosite/templates/login.html
@@ -66,7 +66,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-sm-6 col-xs-6">
-                                    <button class="btn btn-primary" type="submit">OK, LOG IN</button>
+                                    <button class="btn btn-primary" type="submit">LOG IN</button>
                                     <input type="hidden" name="next" value="{{ next }}" />
                                 </div>
                             </div>
@@ -74,7 +74,7 @@
                         </form>
                     </div>
                     <p>By signing in to FIMCO you are confirming that you have read and understood our
-                        <a id="terms" data-toggle="modal" data-target="#termsModal">terms and conditions</a>.
+                        <a id="terms" data-toggle="modal" data-target="#termsModal">Terms and Conditions</a>.
                     </p>
                     <div class="mt-30 text-center">
                         <a href="{% url 'account' %}"><strong>Create Account{{ next }}</strong></a>
