--- a/fimco/fimcosite/templates/top-bar.html
+++ b/fimco/fimcosite/templates/top-bar.html
@@ -5,13 +5,14 @@
         <ul class="top-links list-inline float-right">
             {% if user.is_authenticated %}
                 <li class="text-welcome">Welcome, <strong>{{ user.get_short_name }}</strong></li>
+                <li>
+                    <a class="no-text-underline" href="{% url 'pochi' %}"><i class="et-wallet"></i> PLATFORM</a>
+                </li>
                 <li id="login"><a href="{% url 'logout' %}?next={{request.path}}">LOGOUT</a></li>
             {% else %}
                 <li id="login"><a href="{% url 'login' %}?next={{request.path}}">LOGIN</a></li>
                 <li id="invest"><a href="" data-toggle="modal" data-target="#accountTypeModal">REGISTER</a></li>
             {% endif %}
-        </ul>
-        <ul class="top-links list-inline">
             <li>
                 <a class="dropdown-toggle no-text-underline" data-toggle="dropdown" href="#">
                     <img class="flag-lang" src="/static/img/flags/us.png" width="16" height="11" alt="lang" />
@@ -33,15 +34,6 @@
                     </li>
                 </ul>
             </li>
-            {% if user.is_authenticated %}
-                <li>
-                    <a class="no-text-underline" href="{% url 'pochi' %}"><i class="et-wallet"></i> POCHI</a>
-                </li>
-                <li>
-                    <a class="no-text-underline" href="{% url 'pochi' %}"><i class="fa fa-money"></i> MARKET</a>
-                </li>
-            {% endif %}
-            <li><a href="{% url 'site' 'contact' %}"><i class="fa fa-phone"></i></a></li>
         </ul>
     </div>
 </div>
