--- a/fimco/pochi/static/pochi/css/withdraw.css
+++ b/fimco/pochi/static/pochi/css/withdraw.css
@@ -23,3 +23,8 @@
 .dropdown a:hover {background-color: #f1f1f1}
 
 .show {display:block;}
+
+.col-centered {
+    float: none;
+    margin: auto;
+}
