--- a/fimco/fimcosite/templates/registration.html
+++ b/fimco/fimcosite/templates/registration.html
@@ -246,10 +246,10 @@
                                     <button id="prev" class="btn btn-primary float-left">
                                         <i class="fa fa-arrow-left"></i> PREVIOUS
                                     </button>
-                                    <button id="next" class="btn btn-primary float-right">
+                                    <button id="next" class="btn btn-primary float-right" disabled="disabled">
                                         <i class="fa fa-arrow-right float-right"></i> NEXT
                                     </button>
-                                    <button type="submit" id="finish" class="btn btn-primary float-right">
+                                    <button type="submit" id="finish" class="btn btn-primary float-right" disabled="disabled">
                                         <i class="fa fa-check"></i> REGISTER
                                     </button>
                                 </div>
